# wildshade

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Pipfile  README.md  cliff.toml  main.py  pyproject.toml  pyrightconfig.json
game/: data.py  enemy.py  inventory.py  player.py  quest.py  shop.py
game/utils/: logger.py  security.py
python_src/: pyrightconfig.json
python_src/game/: inventory.py  player.py
python_src/game/utils/: logger.py
src/: main.rs
src/game/: data.rs  enemy.rs  inventory.rs  mod.rs  player.rs  quest.rs  shop.rs
src/utils/: logger.rs  mod.rs  ui.rs
