[project]
name = "wildshade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "faker>=36.1.1",
    "loguru>=0.7.3",
    "rich>=13.9.4",
]

[tool.tomlscript]
run = "uv run main.py"
lint = "ruff check ."
format = "ruff format ."
changelog = "git-cliff"
